// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Task List Generator > should generate task list content matching snapshot > Task List Generator Content 1`] = `
"# Task List: A project tracking app...


## Phase: Project Setup
- **ID:** T-101
  **Title:** Initialize project repository
  *(Description):* Set up version control and project structure
  *(User Story):* US-101, US-102, US-103
  *(Priority):* High
  *(Dependencies):* None
  *(Est. Effort):* Small

## Phase: Backend Development
- **ID:** T-201
  **Title:** Create task model
  *(Description):* Define data structure for tasks
  *(User Story):* US-101
  *(Priority):* High
  *(Dependencies):* T-101
  *(Est. Effort):* Medium"
`;

exports[`Task List Generator > should set final job result content matching snapshot > Detailed Task List Generator Content 1`] = `
"Detailed task list saved to: C:\\Users\\user\\Documents\\Dev Projects\\Dev Environment\\Vibe-Coder-MCP\\workflow-agent-files\\task-list-generator\\2025-05-11T02-24-05-398Z-a-project-tracking-app-task-list-detailed.md

## Phase: Project Setup
- **ID:** T-101
  **Title:** Initialize project repository
  *(Description):* Set up version control and project structure
  *(User Story):* US-101, US-102, US-103
  *(Priority):* High
  *(Dependencies):* None
  *(Est. Effort):* Small

## Phase: Backend Development
- **ID:** T-201
  **Title:** Create task model
  *(Description):* Define data structure for tasks
  *(User Story):* US-101
  *(Priority):* High
  *(Dependencies):* T-101
  *(Est. Effort):* Medium..."
`;
